fix: update initial example data image url, fix markdown issue with large issues overflowing container

--- a/src/components/TaskView.css
+++ b/src/components/TaskView.css
@@ -84,3 +84,7 @@ textarea.edit-textarea {
 .dark input {
     padding-left: 8px;
 }
+
+.markdown img {
+    max-width: 100%;
+}
